LPS-77699 Update Translations

--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_ar.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_ar.properties
@@ -8969,7 +8969,7 @@ layout-set-prototype-configuration-name=قوالب الموقع
 layout-set-prototype-intranet-site-description=موقع يحتوي على مستندات وأخبار
 layout-set-prototype-intranet-site-title=موقع الإنترانت
 layout-set-prototype-system-configuration-description=Configure system level site template options. (Automatic Copy)
-layout-set-prototype-system-configuration-name=Site Templates (Automatic Copy)
+layout-set-prototype-system-configuration-name=قوالب الموقع
 layout-template=قالب التصميم
 layout-template-1-2-1-columns-i=1-2-1 من الأعمدة (50‏/50)
 layout-template-1-2-1-columns-ii=1-2-1 من الأعمدة (70‏/30)
