--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_et.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_et.properties
@@ -8969,7 +8969,7 @@ layout-set-prototype-configuration-name=Vaata malle
 layout-set-prototype-intranet-site-description=Sait dokumentide ja uudistega (Automatic Translation)
 layout-set-prototype-intranet-site-title=Sisevõrgu sait (Automatic Translation)
 layout-set-prototype-system-configuration-description=Configure system level site template options. (Automatic Copy)
-layout-set-prototype-system-configuration-name=Site Templates (Automatic Copy)
+layout-set-prototype-system-configuration-name=Vaata malle
 layout-template=Vormingu mall
 layout-template-1-2-1-columns-i=1-2-1 veergu (50/50) (Automatic Translation)
 layout-template-1-2-1-columns-ii=1-2-1 veerud (70/30) (Automatic Translation)
