--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_fa.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_fa.properties
@@ -8969,7 +8969,7 @@ layout-set-prototype-configuration-name=قالب‌های سایت
 layout-set-prototype-intranet-site-description=سایت به همراه مستندات و اخبار
 layout-set-prototype-intranet-site-title=سایت اینترانت
 layout-set-prototype-system-configuration-description=Configure system level site template options. (Automatic Copy)
-layout-set-prototype-system-configuration-name=Site Templates (Automatic Copy)
+layout-set-prototype-system-configuration-name=قالب‌های سایت
 layout-template=نحوه‌ی چینش مولفه‌ها
 layout-template-1-2-1-columns-i=1-2-1 ستون های (50/50)
 layout-template-1-2-1-columns-ii=1-2-1 ستون های (70‏/30)
