--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_fi.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_fi.properties
@@ -8969,7 +8969,7 @@ layout-set-prototype-configuration-name=Sivustomallit
 layout-set-prototype-intranet-site-description=Asiakirjoja ja uutisia sisältävä sivusto
 layout-set-prototype-intranet-site-title=Intranet sivusto
 layout-set-prototype-system-configuration-description=Configure system level site template options. (Automatic Copy)
-layout-set-prototype-system-configuration-name=Site Templates (Automatic Copy)
+layout-set-prototype-system-configuration-name=Sivustomallit
 layout-template=Leiska
 layout-template-1-2-1-columns-i=1-2-1 Sarakkeet (50/50)
 layout-template-1-2-1-columns-ii=1-2-1 Sarakkeet (70/30)
