--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_fr_CA.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_fr_CA.properties
@@ -8969,7 +8969,7 @@ layout-set-prototype-configuration-name=Gabarits de site
 layout-set-prototype-intranet-site-description=Site avec documents et actualités
 layout-set-prototype-intranet-site-title=Site intranet
 layout-set-prototype-system-configuration-description=Configure system level site template options. (Automatic Copy)
-layout-set-prototype-system-configuration-name=Site Templates (Automatic Copy)
+layout-set-prototype-system-configuration-name=Gabarits de site
 layout-template=Modèle de disposition
 layout-template-1-2-1-columns-i=1-2-1 Colonnes (50/50)
 layout-template-1-2-1-columns-ii=1-2-1 Colonnes (70/30)
