--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_in.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_in.properties
@@ -8969,7 +8969,7 @@ layout-set-prototype-configuration-name=Template Situs
 layout-set-prototype-intranet-site-description=Situs dengan Dokumen dan Berita (Automatic Translation)
 layout-set-prototype-intranet-site-title=Situs Intranet (Automatic Translation)
 layout-set-prototype-system-configuration-description=Configure system level site template options. (Automatic Copy)
-layout-set-prototype-system-configuration-name=Site Templates (Automatic Copy)
+layout-set-prototype-system-configuration-name=Template Situs
 layout-template=Template Layout
 layout-template-1-2-1-columns-i=1-2-1 Kolom (50/50) (Automatic Translation)
 layout-template-1-2-1-columns-ii=1-2-1 Kolom (30/70) (Automatic Translation)
