--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_vi.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_vi.properties
@@ -8969,7 +8969,7 @@ layout-set-prototype-configuration-name=Các mẫu site
 layout-set-prototype-intranet-site-description=Site có Tài liệu và Tin tức (Automatic Translation)
 layout-set-prototype-intranet-site-title=Intranet Site (Automatic Translation)
 layout-set-prototype-system-configuration-description=Configure system level site template options. (Automatic Copy)
-layout-set-prototype-system-configuration-name=Site Templates (Automatic Copy)
+layout-set-prototype-system-configuration-name=Các mẫu site
 layout-template=Biểu mẫu của bố cục
 layout-template-1-2-1-columns-i=1-2-1 Cột (50/50) (Automatic Translation)
 layout-template-1-2-1-columns-ii=1-2-1 Cột (70/30) (Automatic Translation)
