--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_zh_TW.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_zh_TW.properties
@@ -8970,7 +8970,7 @@ layout-set-prototype-configuration-name=站台版型
 layout-set-prototype-intranet-site-description=有文件與新聞的站台
 layout-set-prototype-intranet-site-title=內部網路站台
 layout-set-prototype-system-configuration-description=Configure system level site template options. (Automatic Copy)
-layout-set-prototype-system-configuration-name=Site Templates (Automatic Copy)
+layout-set-prototype-system-configuration-name=站台版型
 layout-template=佈局範本
 layout-template-1-2-1-columns-i=1-2-1 欄 (50/50)
 layout-template-1-2-1-columns-ii=1-2-1 欄 (70/30)
