--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_bg.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_bg.properties
@@ -8969,7 +8969,7 @@ layout-set-prototype-configuration-name=Показване на шаблони
 layout-set-prototype-intranet-site-description=Сайт с документи и новини (Automatic Translation)
 layout-set-prototype-intranet-site-title=Интранет сайт (Automatic Translation)
 layout-set-prototype-system-configuration-description=Configure system level site template options. (Automatic Copy)
-layout-set-prototype-system-configuration-name=Site Templates (Automatic Copy)
+layout-set-prototype-system-configuration-name=Показване на шаблони
 layout-template=Шаблон за изглед
 layout-template-1-2-1-columns-i=1-2-1 Колони (50/50) (Automatic Translation)
 layout-template-1-2-1-columns-ii=1-2-1 Колони (70/30) (Automatic Translation)
