--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_ca.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_ca.properties
@@ -8971,7 +8971,7 @@ layout-set-prototype-configuration-name=Plantilles de lloc web
 layout-set-prototype-intranet-site-description=Lloc amb documents i notícies
 layout-set-prototype-intranet-site-title=Lloc web tipus Intranet
 layout-set-prototype-system-configuration-description=Configure system level site template options. (Automatic Copy)
-layout-set-prototype-system-configuration-name=Site Templates (Automatic Copy)
+layout-set-prototype-system-configuration-name=Plantilles de lloc web
 layout-template=Plantilla de disposició
 layout-template-1-2-1-columns-i=1-2-1 columnes (50/50)
 layout-template-1-2-1-columns-ii=1-2-1 columnes (70/30)
