--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_da.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_da.properties
@@ -8969,7 +8969,7 @@ layout-set-prototype-configuration-name=Webstedsskabeloner
 layout-set-prototype-intranet-site-description=Websted med dokumenter og nyheder (Automatic Translation)
 layout-set-prototype-intranet-site-title=Intranetsted (Automatic Translation)
 layout-set-prototype-system-configuration-description=Configure system level site template options. (Automatic Copy)
-layout-set-prototype-system-configuration-name=Site Templates (Automatic Copy)
+layout-set-prototype-system-configuration-name=Webstedsskabeloner
 layout-template=Layout skabelon
 layout-template-1-2-1-columns-i=1-2-1 Columns (50/50) (Automatic Copy)
 layout-template-1-2-1-columns-ii=1-2-1 Columns (70/30) (Automatic Copy)
