--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_de.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_de.properties
@@ -8971,7 +8971,7 @@ layout-set-prototype-configuration-name=Sitevorlagen
 layout-set-prototype-intranet-site-description=Site mit Dokumenten und Nachrichten
 layout-set-prototype-intranet-site-title=Intranet-Site
 layout-set-prototype-system-configuration-description=Configure system level site template options. (Automatic Copy)
-layout-set-prototype-system-configuration-name=Site Templates (Automatic Copy)
+layout-set-prototype-system-configuration-name=Sitevorlagen
 layout-template=Layoutvorlage
 layout-template-1-2-1-columns-i=1-2-1 Spalten (50/50)
 layout-template-1-2-1-columns-ii=1-2-1 Spalten (70/30)
