--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_el.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_el.properties
@@ -8969,7 +8969,7 @@ layout-set-prototype-configuration-name=Πρότυπα sites
 layout-set-prototype-intranet-site-description=Τοποθεσία με έγγραφα και νέα (Automatic Translation)
 layout-set-prototype-intranet-site-title=Τοποθεσία intranet (Automatic Translation)
 layout-set-prototype-system-configuration-description=Configure system level site template options. (Automatic Copy)
-layout-set-prototype-system-configuration-name=Site Templates (Automatic Copy)
+layout-set-prototype-system-configuration-name=Πρότυπα sites
 layout-template=Πρότυπο διάταξης σελίδας
 layout-template-1-2-1-columns-i=1-2-1 Στήλες (50/50) (Automatic Translation)
 layout-template-1-2-1-columns-ii=1-2-1 Στήλες (70/30) (Automatic Translation)
