--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_es_CO.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_es_CO.properties
@@ -8971,7 +8971,7 @@ layout-set-prototype-configuration-name=Plantillas de sitio web
 layout-set-prototype-intranet-site-description=Sitio con documentos y noticias
 layout-set-prototype-intranet-site-title=Sitio de intranet
 layout-set-prototype-system-configuration-description=Configure system level site template options. (Automatic Copy)
-layout-set-prototype-system-configuration-name=Site Templates (Automatic Copy)
+layout-set-prototype-system-configuration-name=Plantillas de sitio web
 layout-template=Plantilla de página
 layout-template-1-2-1-columns-i=1-2-1 Columnas (50/50)
 layout-template-1-2-1-columns-ii=1-2-1 Columnas (70/30)
