--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_eu.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_eu.properties
@@ -8969,7 +8969,7 @@ layout-set-prototype-configuration-name=Gunearen txantiloiak
 layout-set-prototype-intranet-site-description=Site with Documents and News (Automatic Copy)
 layout-set-prototype-intranet-site-title=Intranet Site (Automatic Copy)
 layout-set-prototype-system-configuration-description=Configure system level site template options. (Automatic Copy)
-layout-set-prototype-system-configuration-name=Site Templates (Automatic Copy)
+layout-set-prototype-system-configuration-name=Gunearen txantiloiak
 layout-template=Diseinu txantiloia
 layout-template-1-2-1-columns-i=1-2-1 zutabe (50/50)
 layout-template-1-2-1-columns-ii=1-2-1 zutabe (70/30)
