--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_hi_IN.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_hi_IN.properties
@@ -8969,7 +8969,7 @@ layout-set-prototype-configuration-name=साइट टेमप्लेट्
 layout-set-prototype-intranet-site-description=दस्तावेजों और समाचार के साथ साइट (Automatic Translation)
 layout-set-prototype-intranet-site-title=इंट्रानेट साइट (Automatic Translation)
 layout-set-prototype-system-configuration-description=Configure system level site template options. (Automatic Copy)
-layout-set-prototype-system-configuration-name=Site Templates (Automatic Copy)
+layout-set-prototype-system-configuration-name=साइट टेमप्लेट्स
 layout-template=लेआउट टेम्पलेट
 layout-template-1-2-1-columns-i=1-2-1 कॉलम (50/50) (Automatic Translation)
 layout-template-1-2-1-columns-ii=1-2-1 कॉलम (70/30) (Automatic Translation)
