--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_hr.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_hr.properties
@@ -8969,7 +8969,7 @@ layout-set-prototype-configuration-name=Predlošci web sjedišta
 layout-set-prototype-intranet-site-description=Web sjedište s dokumentima i novostima
 layout-set-prototype-intranet-site-title=Intranetsko web sjedište
 layout-set-prototype-system-configuration-description=Configure system level site template options. (Automatic Copy)
-layout-set-prototype-system-configuration-name=Site Templates (Automatic Copy)
+layout-set-prototype-system-configuration-name=Predlošci web sjedišta
 layout-template=Predložak izgleda
 layout-template-1-2-1-columns-i=1-2-1 Columns (50/50) (Automatic Copy)
 layout-template-1-2-1-columns-ii=1-2-1 Columns (70/30) (Automatic Copy)
