--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_hu.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_hu.properties
@@ -8972,7 +8972,7 @@ layout-set-prototype-configuration-name=Webhelysablonok
 layout-set-prototype-intranet-site-description=Webhely dokumentumokkal és hírekkel
 layout-set-prototype-intranet-site-title=Intranetes webhely
 layout-set-prototype-system-configuration-description=Configure system level site template options. (Automatic Copy)
-layout-set-prototype-system-configuration-name=Site Templates (Automatic Copy)
+layout-set-prototype-system-configuration-name=Webhelysablonok
 layout-template=Elrendezés sablon
 layout-template-1-2-1-columns-i=1-2-1 oszlop (50/50)
 layout-template-1-2-1-columns-ii=1-2-1 oszlop (70/30)
