--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_it.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_it.properties
@@ -8970,7 +8970,7 @@ layout-set-prototype-configuration-name=Modelli di sito
 layout-set-prototype-intranet-site-description=Sito con Documenti e News
 layout-set-prototype-intranet-site-title=Sito Intranet
 layout-set-prototype-system-configuration-description=Configure system level site template options. (Automatic Copy)
-layout-set-prototype-system-configuration-name=Site Templates (Automatic Copy)
+layout-set-prototype-system-configuration-name=Modelli di sito
 layout-template=Modello Impaginazione
 layout-template-1-2-1-columns-i=1-2-1 Colonne (50/50)
 layout-template-1-2-1-columns-ii=1-2-1 Colonne (70/30)
