--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_iw.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_iw.properties
@@ -8969,7 +8969,7 @@ layout-set-prototype-configuration-name=תבניות אתרים
 layout-set-prototype-intranet-site-description=אתר עם מסמכים וחדשות
 layout-set-prototype-intranet-site-title=אתר אינטראנט
 layout-set-prototype-system-configuration-description=Configure system level site template options. (Automatic Copy)
-layout-set-prototype-system-configuration-name=Site Templates (Automatic Copy)
+layout-set-prototype-system-configuration-name=תבניות אתרים
 layout-template=תבנית פריסה
 layout-template-1-2-1-columns-i=1-2-1 עמודות (50/50)
 layout-template-1-2-1-columns-ii=1-2-1 עמודות (70/30)
