--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_ja.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_ja.properties
@@ -8971,7 +8971,7 @@ layout-set-prototype-configuration-name=サイトテンプレート
 layout-set-prototype-intranet-site-description=ドキュメントとニュースのサイト
 layout-set-prototype-intranet-site-title=イントラネットサイト
 layout-set-prototype-system-configuration-description=Configure system level site template options. (Automatic Copy)
-layout-set-prototype-system-configuration-name=Site Templates (Automatic Copy)
+layout-set-prototype-system-configuration-name=サイトテンプレート
 layout-template=レイアウトテンプレート
 layout-template-1-2-1-columns-i=1-2-1 カラム (50/50)
 layout-template-1-2-1-columns-ii=1-2-1 カラム (70/30)
