--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_ko.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_ko.properties
@@ -8969,7 +8969,7 @@ layout-set-prototype-configuration-name=위치 템플렛
 layout-set-prototype-intranet-site-description=문서 및 뉴스가 있는 사이트
 layout-set-prototype-intranet-site-title=인트라넷 사이트
 layout-set-prototype-system-configuration-description=Configure system level site template options. (Automatic Copy)
-layout-set-prototype-system-configuration-name=Site Templates (Automatic Copy)
+layout-set-prototype-system-configuration-name=위치 템플렛
 layout-template=배치 템플렛
 layout-template-1-2-1-columns-i=1-2-1 Columns (50/50)
 layout-template-1-2-1-columns-ii=1-2-1 Columns (70/30)
