--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_nb.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_nb.properties
@@ -8969,7 +8969,7 @@ layout-set-prototype-configuration-name=Nettstedsmaler
 layout-set-prototype-intranet-site-description=Nettsted med dokumenter og nyheter
 layout-set-prototype-intranet-site-title=Intranettnettsted
 layout-set-prototype-system-configuration-description=Configure system level site template options. (Automatic Copy)
-layout-set-prototype-system-configuration-name=Site Templates (Automatic Copy)
+layout-set-prototype-system-configuration-name=Nettstedsmaler
 layout-template=Utformingsmal
 layout-template-1-2-1-columns-i=1-2-1 Kolonner (50/50) (Automatic Translation)
 layout-template-1-2-1-columns-ii=1-2-1 Kolonner (70/30) (Automatic Translation)
