--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_nl.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_nl.properties
@@ -8972,7 +8972,7 @@ layout-set-prototype-configuration-name=Sitesjablonen
 layout-set-prototype-intranet-site-description=Site met documenten en nieuws
 layout-set-prototype-intranet-site-title=Intranet Website
 layout-set-prototype-system-configuration-description=Configure system level site template options. (Automatic Copy)
-layout-set-prototype-system-configuration-name=Site Templates (Automatic Copy)
+layout-set-prototype-system-configuration-name=Sitesjablonen
 layout-template=Lay-outsjabloon
 layout-template-1-2-1-columns-i=1-2-1 Kolommen (50/50)
 layout-template-1-2-1-columns-ii=1-2-1 Kolommen (70/30)
