--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_nl_BE.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_nl_BE.properties
@@ -8972,7 +8972,7 @@ layout-set-prototype-configuration-name=Website templates
 layout-set-prototype-intranet-site-description=Site with Documents and News (Automatic Copy)
 layout-set-prototype-intranet-site-title=Intranet Site (Automatic Copy)
 layout-set-prototype-system-configuration-description=Configure system level site template options. (Automatic Copy)
-layout-set-prototype-system-configuration-name=Site Templates (Automatic Copy)
+layout-set-prototype-system-configuration-name=Website templates
 layout-template=Layout template
 layout-template-1-2-1-columns-i=1-2-1 Columns (50/50) (Automatic Copy)
 layout-template-1-2-1-columns-ii=1-2-1 Columns (70/30) (Automatic Copy)
