--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_pl.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_pl.properties
@@ -8969,7 +8969,7 @@ layout-set-prototype-configuration-name=Szablony witryn
 layout-set-prototype-intranet-site-description=Witryna z dokumentami i aktualnościami
 layout-set-prototype-intranet-site-title=Witryna Intranetowa
 layout-set-prototype-system-configuration-description=Configure system level site template options. (Automatic Copy)
-layout-set-prototype-system-configuration-name=Site Templates (Automatic Copy)
+layout-set-prototype-system-configuration-name=Szablony witryn
 layout-template=Szablon układu
 layout-template-1-2-1-columns-i=1-2-1 Kolumny (50/50) (Automatic Translation)
 layout-template-1-2-1-columns-ii=1-2-1 Kolumny (70/30) (Automatic Translation)
