--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_pt_BR.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_pt_BR.properties
@@ -8969,7 +8969,7 @@ layout-set-prototype-configuration-name=Modelos de Site
 layout-set-prototype-intranet-site-description=Site com Documentos e Notícias
 layout-set-prototype-intranet-site-title=Site da Intranet
 layout-set-prototype-system-configuration-description=Configure system level site template options. (Automatic Copy)
-layout-set-prototype-system-configuration-name=Site Templates (Automatic Copy)
+layout-set-prototype-system-configuration-name=Modelos de Site
 layout-template=Modelo de Layout
 layout-template-1-2-1-columns-i=1-2-1 Colunas (50/50)
 layout-template-1-2-1-columns-ii=1-2-1 Colunas (70/30)
