--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_pt_PT.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_pt_PT.properties
@@ -8971,7 +8971,7 @@ layout-set-prototype-configuration-name=Modelos de Sítio
 layout-set-prototype-intranet-site-description=Site com documentos e notícias
 layout-set-prototype-intranet-site-title=Site de Intranet
 layout-set-prototype-system-configuration-description=Configure system level site template options. (Automatic Copy)
-layout-set-prototype-system-configuration-name=Site Templates (Automatic Copy)
+layout-set-prototype-system-configuration-name=Modelos de Sítio
 layout-template=Template de Layout
 layout-template-1-2-1-columns-i=1-2-1 Columns (50/50) (Automatic Copy)
 layout-template-1-2-1-columns-ii=1-2-1 Columns (70/30) (Automatic Copy)
