--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_ro.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_ro.properties
@@ -8969,7 +8969,7 @@ layout-set-prototype-configuration-name=Șabloane de site-uri
 layout-set-prototype-intranet-site-description=Site-ul cu documente și știri (Automatic Translation)
 layout-set-prototype-intranet-site-title=Intranet Site (Automatic Translation)
 layout-set-prototype-system-configuration-description=Configure system level site template options. (Automatic Copy)
-layout-set-prototype-system-configuration-name=Site Templates (Automatic Copy)
+layout-set-prototype-system-configuration-name=Șabloane de site-uri
 layout-template=Sablon Afisare
 layout-template-1-2-1-columns-i=1-2-1 Coloane (50/50) (Automatic Translation)
 layout-template-1-2-1-columns-ii=1-2-1 Coloane (70/30) (Automatic Translation)
