--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_ru.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_ru.properties
@@ -8969,7 +8969,7 @@ layout-set-prototype-configuration-name=Шаблоны сайтов
 layout-set-prototype-intranet-site-description=Сайт с документами и новостями (Automatic Translation)
 layout-set-prototype-intranet-site-title=Интранет-сайт (Automatic Translation)
 layout-set-prototype-system-configuration-description=Configure system level site template options. (Automatic Copy)
-layout-set-prototype-system-configuration-name=Site Templates (Automatic Copy)
+layout-set-prototype-system-configuration-name=Шаблоны сайтов
 layout-template=Шаблон макета
 layout-template-1-2-1-columns-i=1-2-1 Колонны (50/50) (Automatic Translation)
 layout-template-1-2-1-columns-ii=1-2-1 Колонны (70/30) (Automatic Translation)
