--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_sk.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_sk.properties
@@ -8969,7 +8969,7 @@ layout-set-prototype-configuration-name=Šablóny sídiel
 layout-set-prototype-intranet-site-description=Sidlo s dokumentami a správami
 layout-set-prototype-intranet-site-title=Intranetové sídlo
 layout-set-prototype-system-configuration-description=Configure system level site template options. (Automatic Copy)
-layout-set-prototype-system-configuration-name=Site Templates (Automatic Copy)
+layout-set-prototype-system-configuration-name=Šablóny sídiel
 layout-template=Šablóna rozmiestnenia
 layout-template-1-2-1-columns-i=1-2-1 Stĺpce (50/50) (Automatic Translation)
 layout-template-1-2-1-columns-ii=1-2-1 Stĺpce (70/30) (Automatic Translation)
