--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_sl.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_sl.properties
@@ -8969,7 +8969,7 @@ layout-set-prototype-configuration-name=Poglej predloge.
 layout-set-prototype-intranet-site-description=Spletno mesto z dokumenti in novicami (Automatic Translation)
 layout-set-prototype-intranet-site-title=Mesto intranet (Automatic Translation)
 layout-set-prototype-system-configuration-description=Configure system level site template options. (Automatic Copy)
-layout-set-prototype-system-configuration-name=Site Templates (Automatic Copy)
+layout-set-prototype-system-configuration-name=Poglej predloge.
 layout-template=Predloga izgleda
 layout-template-1-2-1-columns-i=1-2-1 Stolpci (50/50) (Automatic Translation)
 layout-template-1-2-1-columns-ii=1-2-1 Stolpci (70/30) (Automatic Translation)
