--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_sv.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_sv.properties
@@ -8969,7 +8969,7 @@ layout-set-prototype-configuration-name=Platsmallar
 layout-set-prototype-intranet-site-description=Webbplats med dokument och nyheter
 layout-set-prototype-intranet-site-title=Intranätplats
 layout-set-prototype-system-configuration-description=Configure system level site template options. (Automatic Copy)
-layout-set-prototype-system-configuration-name=Site Templates (Automatic Copy)
+layout-set-prototype-system-configuration-name=Platsmallar
 layout-template=Formatmall
 layout-template-1-2-1-columns-i=1-2-1 kolumner (50/50)
 layout-template-1-2-1-columns-ii=1-2-1 kolumner (70/30)
