--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_ta_IN.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_ta_IN.properties
@@ -8969,7 +8969,7 @@ layout-set-prototype-configuration-name=தளத்தின் டெம்ப
 layout-set-prototype-intranet-site-description=ஆவணங்கள் மற்றும் செய்தி தளம்
 layout-set-prototype-intranet-site-title=அக இணைய தளம்
 layout-set-prototype-system-configuration-description=Configure system level site template options. (Automatic Copy)
-layout-set-prototype-system-configuration-name=Site Templates (Automatic Copy)
+layout-set-prototype-system-configuration-name=தளத்தின் டெம்ப்ளேட்
 layout-template=Layout Template (Automatic Copy)
 layout-template-1-2-1-columns-i=1-2-1 பத்திகள் (50/50)
 layout-template-1-2-1-columns-ii=1-2-1 பத்திகள் (70/50)
