--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_th.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_th.properties
@@ -8969,7 +8969,7 @@ layout-set-prototype-configuration-name=เทมเพลตไซต์
 layout-set-prototype-intranet-site-description=เว็บไซต์ที่มีเอกสารและข่าว
 layout-set-prototype-intranet-site-title=ไซต์อินทราเน็ต
 layout-set-prototype-system-configuration-description=Configure system level site template options. (Automatic Copy)
-layout-set-prototype-system-configuration-name=Site Templates (Automatic Copy)
+layout-set-prototype-system-configuration-name=เทมเพลตไซต์
 layout-template=เลย์เอาท์เท็มเพลต
 layout-template-1-2-1-columns-i=1-2-1 คอลัมน์ (50/50)
 layout-template-1-2-1-columns-ii=1-2-1 คอลัมน์ (70/30)
