--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_tr.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_tr.properties
@@ -8969,7 +8969,7 @@ layout-set-prototype-configuration-name=Şablonları Görüntüle
 layout-set-prototype-intranet-site-description=Belgeler ve Haberler içeren site (Automatic Translation)
 layout-set-prototype-intranet-site-title=Intranet Sitesi (Automatic Translation)
 layout-set-prototype-system-configuration-description=Configure system level site template options. (Automatic Copy)
-layout-set-prototype-system-configuration-name=Site Templates (Automatic Copy)
+layout-set-prototype-system-configuration-name=Şablonları Görüntüle
 layout-template=Yerleşim Şablonu
 layout-template-1-2-1-columns-i=1-2-1 Sütunlar (50/50) (Automatic Translation)
 layout-template-1-2-1-columns-ii=1-2-1 Sütunlar (70/30) (Automatic Translation)
