--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_uk.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_uk.properties
@@ -8969,7 +8969,7 @@ layout-set-prototype-configuration-name=Показати шаблони
 layout-set-prototype-intranet-site-description=Сайт з документами та новинами (Automatic Translation)
 layout-set-prototype-intranet-site-title=Сайт інтрамережі (Automatic Translation)
 layout-set-prototype-system-configuration-description=Configure system level site template options. (Automatic Copy)
-layout-set-prototype-system-configuration-name=Site Templates (Automatic Copy)
+layout-set-prototype-system-configuration-name=Показати шаблони
 layout-template=Шаблон макету
 layout-template-1-2-1-columns-i=1-2-1 стовпців (50/50) (Automatic Translation)
 layout-template-1-2-1-columns-ii=1-2-1 стовпців (70/30) (Automatic Translation)
