--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_zh_CN.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_zh_CN.properties
@@ -8971,7 +8971,7 @@ layout-set-prototype-configuration-name=站点模板
 layout-set-prototype-intranet-site-description=有内容和新闻的站点
 layout-set-prototype-intranet-site-title=内网
 layout-set-prototype-system-configuration-description=Configure system level site template options. (Automatic Copy)
-layout-set-prototype-system-configuration-name=Site Templates (Automatic Copy)
+layout-set-prototype-system-configuration-name=站点模板
 layout-template=页面模板
 layout-template-1-2-1-columns-i=1-2-1 列 (50/50)
 layout-template-1-2-1-columns-ii=1-2-1 列 (70/30)
