--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_ar.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_ar.properties
@@ -16684,7 +16684,7 @@ the-selected-file-is-not-a-valid-zip-file=الملف المحدد ليس ملف 
 the-selected-form-no-longer-exists=النموذج المحدد لم يعد موجودًا.
 the-selected-image-was-deleted=تم حذف الرسالة المحددة.
 the-selected-image-was-moved-to-the-recycle-bin=تم نقل الرسالة المحددة إلى سلة المحذوفات.
-the-selected-knowledge-base-is-empty=The selected Knowledge Base is empty. (Automatic Copy)
+the-selected-knowledge-base-is-empty=The selected knowledge base is empty. (Automatic Copy)
 the-selected-license-is-used-by-at-least-one-product=يتم استخدام الترخيص المحدد من قبل منتج واحد على الأقل.
 the-selected-list-no-longer-exists=القائمة التي تم اختيارها لم تعد موجودة.
 the-selected-menu-does-not-exist=القائمة المحددة غير موجودة.
