--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_et.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_et.properties
@@ -16684,7 +16684,7 @@ the-selected-file-is-not-a-valid-zip-file=Valitud fail pole sobiv ZIP-fail. (Aut
 the-selected-form-no-longer-exists=Valitud vormi pole enam olemas. (Automatic Translation)
 the-selected-image-was-deleted=Valitud pilt kustutati. (Automatic Translation)
 the-selected-image-was-moved-to-the-recycle-bin=Valitud pilt teisaldati prügikasti. (Automatic Translation)
-the-selected-knowledge-base-is-empty=The selected Knowledge Base is empty. (Automatic Copy)
+the-selected-knowledge-base-is-empty=The selected knowledge base is empty. (Automatic Copy)
 the-selected-license-is-used-by-at-least-one-product=Valitud litsentsi kasutab vähemalt üks toode. (Automatic Translation)
 the-selected-list-no-longer-exists=Valitud loendit pole enam olemas. (Automatic Translation)
 the-selected-menu-does-not-exist=Valitud menüüd pole olemas. (Automatic Translation)
