--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_fr_CA.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_fr_CA.properties
@@ -16684,7 +16684,7 @@ the-selected-file-is-not-a-valid-zip-file=Le fichier sélectionné n'est pas un 
 the-selected-form-no-longer-exists=Le formulaire sélectionné n'existe plus.
 the-selected-image-was-deleted=L'image sélectionnée a été supprimée.
 the-selected-image-was-moved-to-the-recycle-bin=L'image sélectionnée a été déplacée vers la corbeille.
-the-selected-knowledge-base-is-empty=The selected Knowledge Base is empty. (Automatic Copy)
+the-selected-knowledge-base-is-empty=The selected knowledge base is empty. (Automatic Copy)
 the-selected-license-is-used-by-at-least-one-product=La licence sélectionnée est utilisée par au moins un produit.
 the-selected-list-no-longer-exists=La liste sélectionnée n'existe plus.
 the-selected-menu-does-not-exist=Le menu sélectionné n'existe pas.
