--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_hr.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_hr.properties
@@ -16684,7 +16684,7 @@ the-selected-file-is-not-a-valid-zip-file=The selected file is not a valid ZIP f
 the-selected-form-no-longer-exists=The selected form no longer exists. (Automatic Copy)
 the-selected-image-was-deleted=The selected image was deleted. (Automatic Copy)
 the-selected-image-was-moved-to-the-recycle-bin=The selected image was moved to the Recycle Bin. (Automatic Copy)
-the-selected-knowledge-base-is-empty=The selected Knowledge Base is empty. (Automatic Copy)
+the-selected-knowledge-base-is-empty=The selected knowledge base is empty. (Automatic Copy)
 the-selected-license-is-used-by-at-least-one-product=The selected license is used by at least one product. (Automatic Copy)
 the-selected-list-no-longer-exists=Odabranog popisa više ne postoji.
 the-selected-menu-does-not-exist=The selected menu does not exist. (Automatic Copy)
