--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_hu.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_hu.properties
@@ -16687,7 +16687,7 @@ the-selected-file-is-not-a-valid-zip-file=A kiválasztott fájl nem egy érvény
 the-selected-form-no-longer-exists=A kiválasztott űrlap már nem létezik.
 the-selected-image-was-deleted=A kiválasztott kép törölve.
 the-selected-image-was-moved-to-the-recycle-bin=A kiválasztott kép a Lomtárba mozgatva.
-the-selected-knowledge-base-is-empty=The selected Knowledge Base is empty. (Automatic Copy)
+the-selected-knowledge-base-is-empty=The selected knowledge base is empty. (Automatic Copy)
 the-selected-license-is-used-by-at-least-one-product=A választott licenc már használva van legalább egy termékhez.
 the-selected-list-no-longer-exists=A kijelölt lista már nem létezik.
 the-selected-menu-does-not-exist=A kiválasztott menü nem létezik.
