--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_in.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_in.properties
@@ -16684,7 +16684,7 @@ the-selected-file-is-not-a-valid-zip-file=File yang dipilih bukan file ZIP yang 
 the-selected-form-no-longer-exists=Formulir yang dipilih tidak ada lagi. (Automatic Translation)
 the-selected-image-was-deleted=Citra terpilih telah dihapus. (Automatic Translation)
 the-selected-image-was-moved-to-the-recycle-bin=Gambar yang dipilih dipindahkan ke Tampungan Daur Ulang. (Automatic Translation)
-the-selected-knowledge-base-is-empty=The selected Knowledge Base is empty. (Automatic Copy)
+the-selected-knowledge-base-is-empty=The selected knowledge base is empty. (Automatic Copy)
 the-selected-license-is-used-by-at-least-one-product=Lisensi yang dipilih digunakan oleh setidaknya satu produk. (Automatic Translation)
 the-selected-list-no-longer-exists=Konten web yang dipilih tidak ada lagi.
 the-selected-menu-does-not-exist=Menu yang dipilih tidak ada. (Automatic Translation)
