--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_ms.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_ms.properties
@@ -16684,7 +16684,7 @@ the-selected-file-is-not-a-valid-zip-file=Fail terpilih bukan fail ZIP yang sah.
 the-selected-form-no-longer-exists=Borang yang dipilih tidak lagi wujud. (Automatic Translation)
 the-selected-image-was-deleted=Imej terpilih telah dihapuskan. (Automatic Translation)
 the-selected-image-was-moved-to-the-recycle-bin=Imej terpilih telah dipindahkan ke Tong Kitar Semula. (Automatic Translation)
-the-selected-knowledge-base-is-empty=The selected Knowledge Base is empty. (Automatic Copy)
+the-selected-knowledge-base-is-empty=The selected knowledge base is empty. (Automatic Copy)
 the-selected-license-is-used-by-at-least-one-product=Lesen terpilih digunakan oleh sekurang-kurangnya satu produk. (Automatic Translation)
 the-selected-list-no-longer-exists=Senarai terpilih tidak lagi wujud. (Automatic Translation)
 the-selected-menu-does-not-exist=Menu terpilih tidak wujud. (Automatic Translation)
