--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_nb.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_nb.properties
@@ -16684,7 +16684,7 @@ the-selected-file-is-not-a-valid-zip-file=Den valgte filen er ikke en gyldig ZIP
 the-selected-form-no-longer-exists=Det valgte skjemaet finnes ikke mer.
 the-selected-image-was-deleted=Det valgte bildet ble slettet. (Automatic Translation)
 the-selected-image-was-moved-to-the-recycle-bin=Det valgte bildet ble flyttet til papirkurven. (Automatic Translation)
-the-selected-knowledge-base-is-empty=The selected Knowledge Base is empty. (Automatic Copy)
+the-selected-knowledge-base-is-empty=The selected knowledge base is empty. (Automatic Copy)
 the-selected-license-is-used-by-at-least-one-product=Den valgte lisensen brukes av minst ett produkt.
 the-selected-list-no-longer-exists=Den valgte listen eksisterer ikke lenger.
 the-selected-menu-does-not-exist=Den valgte menyen finnes ikke. (Automatic Translation)
