--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_nl.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_nl.properties
@@ -16687,7 +16687,7 @@ the-selected-file-is-not-a-valid-zip-file=Het geselecteerde bestand is geen geld
 the-selected-form-no-longer-exists=Het geselecteerde formulier bestaat niet meer.
 the-selected-image-was-deleted=De geselecteerde afbeelding is verwijderd.
 the-selected-image-was-moved-to-the-recycle-bin=De geselecteerde afbeelding is verplaats naar de prullenbak.
-the-selected-knowledge-base-is-empty=The selected Knowledge Base is empty. (Automatic Copy)
+the-selected-knowledge-base-is-empty=The selected knowledge base is empty. (Automatic Copy)
 the-selected-license-is-used-by-at-least-one-product=De geselecteerde licentie is in gebruik voor minstens één product.
 the-selected-list-no-longer-exists=De geselecteerde lijst bestaat niet meer.
 the-selected-menu-does-not-exist=Het geselecteerde menu bestaat niet.
