--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_pt_BR.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_pt_BR.properties
@@ -16684,7 +16684,7 @@ the-selected-file-is-not-a-valid-zip-file=O arquivo selecionado não é um arqui
 the-selected-form-no-longer-exists=O formulário selecionado não existe mais.
 the-selected-image-was-deleted=A imagem selecionada foi excluída.
 the-selected-image-was-moved-to-the-recycle-bin=A imagem selecionada foi movida par a Lixeira.
-the-selected-knowledge-base-is-empty=The selected Knowledge Base is empty. (Automatic Copy)
+the-selected-knowledge-base-is-empty=The selected knowledge base is empty. (Automatic Copy)
 the-selected-license-is-used-by-at-least-one-product=A licença selecionada é usada por pelo menos um produto.
 the-selected-list-no-longer-exists=A lista selecionada não existe mais.
 the-selected-menu-does-not-exist=Ocorreu um erro, este menu não existe.
