--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_pt_PT.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_pt_PT.properties
@@ -16686,7 +16686,7 @@ the-selected-file-is-not-a-valid-zip-file=O arquivo selecionado não é um arqui
 the-selected-form-no-longer-exists=O formulário selecionado deixou de existir.
 the-selected-image-was-deleted=A imagem selecionada foi excluída. (Automatic Translation)
 the-selected-image-was-moved-to-the-recycle-bin=A imagem selecionada foi movida para a Reciclagem.
-the-selected-knowledge-base-is-empty=The selected Knowledge Base is empty. (Automatic Copy)
+the-selected-knowledge-base-is-empty=The selected knowledge base is empty. (Automatic Copy)
 the-selected-license-is-used-by-at-least-one-product=A licença selecionada é utilizada por pelo menos um produto.
 the-selected-list-no-longer-exists=A lista selecionada já não existe.
 the-selected-menu-does-not-exist=O menu selecionado não existe. (Automatic Translation)
