--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_sl.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_sl.properties
@@ -16684,7 +16684,7 @@ the-selected-file-is-not-a-valid-zip-file=Izbrana datoteka ni veljavna datoteka 
 the-selected-form-no-longer-exists=Izbrani obrazec ne obstaja več. (Automatic Translation)
 the-selected-image-was-deleted=Izbrana slika je bila izbrisana. (Automatic Translation)
 the-selected-image-was-moved-to-the-recycle-bin=Izbrana slika je bila premaknjena v koš. (Automatic Translation)
-the-selected-knowledge-base-is-empty=The selected Knowledge Base is empty. (Automatic Copy)
+the-selected-knowledge-base-is-empty=The selected knowledge base is empty. (Automatic Copy)
 the-selected-license-is-used-by-at-least-one-product=Izbrano licenco uporablja vsaj en izdelek. (Automatic Translation)
 the-selected-list-no-longer-exists=Izbrani seznam ne obstaja več. (Automatic Translation)
 the-selected-menu-does-not-exist=Izbrani meni ne obstaja. (Automatic Translation)
