--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_uk.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_uk.properties
@@ -16684,7 +16684,7 @@ the-selected-file-is-not-a-valid-zip-file=Вибраний файл не є пр
 the-selected-form-no-longer-exists=Вибрана форма більше не існує. (Automatic Translation)
 the-selected-image-was-deleted=Вибране зображення видалено. (Automatic Translation)
 the-selected-image-was-moved-to-the-recycle-bin=Вибране зображення переміщено до кошика. (Automatic Translation)
-the-selected-knowledge-base-is-empty=The selected Knowledge Base is empty. (Automatic Copy)
+the-selected-knowledge-base-is-empty=The selected knowledge base is empty. (Automatic Copy)
 the-selected-license-is-used-by-at-least-one-product=Вибрана ліцензія використовується принаймні одним продуктом. (Automatic Translation)
 the-selected-list-no-longer-exists=Вибраний список більше не існує. (Automatic Translation)
 the-selected-menu-does-not-exist=Вибране меню не існує. (Automatic Translation)
