--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_zh_CN.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_zh_CN.properties
@@ -16686,7 +16686,7 @@ the-selected-file-is-not-a-valid-zip-file=所选文件不是一个有效的 ZIP 
 the-selected-form-no-longer-exists=所选表单已不存在。
 the-selected-image-was-deleted=选定图像已被删除。
 the-selected-image-was-moved-to-the-recycle-bin=选定图像已被移至回收站。
-the-selected-knowledge-base-is-empty=The selected Knowledge Base is empty. (Automatic Copy)
+the-selected-knowledge-base-is-empty=The selected knowledge base is empty. (Automatic Copy)
 the-selected-license-is-used-by-at-least-one-product=所选license已经至少被用于一个产品。
 the-selected-list-no-longer-exists=所选列表已不再存在。
 the-selected-menu-does-not-exist=选定菜单不存在。
