--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_bg.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_bg.properties
@@ -16684,7 +16684,7 @@ the-selected-file-is-not-a-valid-zip-file=Избраният файл не е в
 the-selected-form-no-longer-exists=Избраният формуляр вече не съществува. (Automatic Translation)
 the-selected-image-was-deleted=Избраното изображение е изтрито. (Automatic Translation)
 the-selected-image-was-moved-to-the-recycle-bin=Избраното изображение е преместено в "Кошчето". (Automatic Translation)
-the-selected-knowledge-base-is-empty=The selected Knowledge Base is empty. (Automatic Copy)
+the-selected-knowledge-base-is-empty=The selected knowledge base is empty. (Automatic Copy)
 the-selected-license-is-used-by-at-least-one-product=Избраният лиценз се използва от поне един продукт. (Automatic Translation)
 the-selected-list-no-longer-exists=Избраният списък вече не съществува. (Automatic Translation)
 the-selected-menu-does-not-exist=Избраното меню не съществува. (Automatic Translation)
