--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_es_MX.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_es_MX.properties
@@ -16686,7 +16686,7 @@ the-selected-file-is-not-a-valid-zip-file=El archivo seleccionado no es un archi
 the-selected-form-no-longer-exists=El formulario seleccionado ya no existe.
 the-selected-image-was-deleted=La imagen seleccionada se ha eliminado.
 the-selected-image-was-moved-to-the-recycle-bin=La imagen seleccionada se ha movido a la Papelera de reciclaje.
-the-selected-knowledge-base-is-empty=The selected Knowledge Base is empty. (Automatic Copy)
+the-selected-knowledge-base-is-empty=The selected knowledge base is empty. (Automatic Copy)
 the-selected-license-is-used-by-at-least-one-product=La licencia seleccionada es utilizada por al menos un producto.
 the-selected-list-no-longer-exists=El contenido web seleccionado ya no existe.
 the-selected-menu-does-not-exist=El menú seleccionado no existe.
