LPS-77699 Update Translations

--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_hu.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_hu.properties
@@ -8338,7 +8338,7 @@ javax.portlet.title.com_liferay_calendar_web_portlet_CalendarPortlet=Naptár
 javax.portlet.title.com_liferay_change_tracking_web_portlet_PublicationsPortlet=Változáslisták
 javax.portlet.title.com_liferay_chart_sample_web_portlet_ChartSamplePortlet=Minta ábra
 javax.portlet.title.com_liferay_clay_sample_web_portlet_ClaySamplePortlet=Agyag minta
-javax.portlet.title.com_liferay_client_extension_web_internal_portlet_ClientExtensionAdminPortlet=Client Extensions (Automatic Copy)
+javax.portlet.title.com_liferay_client_extension_web_internal_portlet_ClientExtensionAdminPortlet=Távoli alkalmazások
 javax.portlet.title.com_liferay_comment_page_comments_web_portlet_PageCommentsPortlet=Hozzászólások az oldalhoz
 javax.portlet.title.com_liferay_comment_web_portlet_CommentPortlet=Hozzászólások
 javax.portlet.title.com_liferay_commerce_account_admin_web_internal_portlet_CommerceAccountAdminPortlet=Fiókok
