--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_ca.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_ca.properties
@@ -8338,7 +8338,7 @@ javax.portlet.title.com_liferay_calendar_web_portlet_CalendarPortlet=Calendari
 javax.portlet.title.com_liferay_change_tracking_web_portlet_PublicationsPortlet=Llistes de canvis
 javax.portlet.title.com_liferay_chart_sample_web_portlet_ChartSamplePortlet=Mostra de gràfiques
 javax.portlet.title.com_liferay_clay_sample_web_portlet_ClaySamplePortlet=Mostra de Clay
-javax.portlet.title.com_liferay_client_extension_web_internal_portlet_ClientExtensionAdminPortlet=Client Extensions (Automatic Copy)
+javax.portlet.title.com_liferay_client_extension_web_internal_portlet_ClientExtensionAdminPortlet=Aplicacions remotes
 javax.portlet.title.com_liferay_comment_page_comments_web_portlet_PageCommentsPortlet=Comentaris de la pàgina
 javax.portlet.title.com_liferay_comment_web_portlet_CommentPortlet=Comentaris
 javax.portlet.title.com_liferay_commerce_account_admin_web_internal_portlet_CommerceAccountAdminPortlet=Comptes
