--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_ko.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_ko.properties
@@ -8338,7 +8338,7 @@ javax.portlet.title.com_liferay_calendar_web_portlet_CalendarPortlet=캘린더
 javax.portlet.title.com_liferay_change_tracking_web_portlet_PublicationsPortlet=출판
 javax.portlet.title.com_liferay_chart_sample_web_portlet_ChartSamplePortlet=챠트 예제
 javax.portlet.title.com_liferay_clay_sample_web_portlet_ClaySamplePortlet=Clay 예제
-javax.portlet.title.com_liferay_client_extension_web_internal_portlet_ClientExtensionAdminPortlet=Client Extensions (Automatic Copy)
+javax.portlet.title.com_liferay_client_extension_web_internal_portlet_ClientExtensionAdminPortlet=원격 앱
 javax.portlet.title.com_liferay_comment_page_comments_web_portlet_PageCommentsPortlet=페이지는 논평한다
 javax.portlet.title.com_liferay_comment_web_portlet_CommentPortlet=비평
 javax.portlet.title.com_liferay_commerce_account_admin_web_internal_portlet_CommerceAccountAdminPortlet=계정
