--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_nl.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_nl.properties
@@ -8338,7 +8338,7 @@ javax.portlet.title.com_liferay_calendar_web_portlet_CalendarPortlet=Kalender
 javax.portlet.title.com_liferay_change_tracking_web_portlet_PublicationsPortlet=Wijzigingslijsten
 javax.portlet.title.com_liferay_chart_sample_web_portlet_ChartSamplePortlet=Grafiekvoorbeeld
 javax.portlet.title.com_liferay_clay_sample_web_portlet_ClaySamplePortlet=Clay-voorbeeld
-javax.portlet.title.com_liferay_client_extension_web_internal_portlet_ClientExtensionAdminPortlet=Client Extensions (Automatic Copy)
+javax.portlet.title.com_liferay_client_extension_web_internal_portlet_ClientExtensionAdminPortlet=Externe apps
 javax.portlet.title.com_liferay_comment_page_comments_web_portlet_PageCommentsPortlet=Paginareacties
 javax.portlet.title.com_liferay_comment_web_portlet_CommentPortlet=Reacties
 javax.portlet.title.com_liferay_commerce_account_admin_web_internal_portlet_CommerceAccountAdminPortlet=Accounts
