--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_zh_TW.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_zh_TW.properties
@@ -8338,7 +8338,7 @@ javax.portlet.title.com_liferay_calendar_web_portlet_CalendarPortlet=行事曆
 javax.portlet.title.com_liferay_change_tracking_web_portlet_PublicationsPortlet=發布
 javax.portlet.title.com_liferay_chart_sample_web_portlet_ChartSamplePortlet=圖表範例
 javax.portlet.title.com_liferay_clay_sample_web_portlet_ClaySamplePortlet=Clay 範例
-javax.portlet.title.com_liferay_client_extension_web_internal_portlet_ClientExtensionAdminPortlet=Client Extensions (Automatic Copy)
+javax.portlet.title.com_liferay_client_extension_web_internal_portlet_ClientExtensionAdminPortlet=遠端應用程式
 javax.portlet.title.com_liferay_comment_page_comments_web_portlet_PageCommentsPortlet=頁面評論
 javax.portlet.title.com_liferay_comment_web_portlet_CommentPortlet=評論
 javax.portlet.title.com_liferay_commerce_account_admin_web_internal_portlet_CommerceAccountAdminPortlet=帳戶
