--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_ar.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_ar.properties
@@ -7241,7 +7241,7 @@ go-back=رجوع
 go-to-answers=ذهاب إلى الإجابات
 go-to-category=الذهاب إلى التصنيف
 go-to-dashboard-pages=انتقال إلى الصفحات السابقة
-go-to-documentation-to-learn-more-about-date-formats=Go to documentation to learn more about date formats. (Automatic Copy)
+go-to-documentation-to-learn-more-about-date-formats=Learn more about date formats. (Automatic Copy)
 go-to-folder=الذهاب إلى المجلد
 go-to-live=الانتقال للبث المباشر
 go-to-marketplace=الانتقال إلى السوق
