--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_ca.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_ca.properties
@@ -7241,7 +7241,7 @@ go-back=Enrere
 go-to-answers=Ves a Respostes
 go-to-category=Ves a la categoria
 go-to-dashboard-pages=Ves al quadre de comandament de pàgines
-go-to-documentation-to-learn-more-about-date-formats=Go to documentation to learn more about date formats. (Automatic Copy)
+go-to-documentation-to-learn-more-about-date-formats=Learn more about date formats. (Automatic Copy)
 go-to-folder=Ves a la carpeta
 go-to-live=Anar a Live
 go-to-marketplace=Anar a la Marketplace
