--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_cs.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_cs.properties
@@ -7241,7 +7241,7 @@ go-back=Go Back (Automatic Copy)
 go-to-answers=Go to Answers (Automatic Copy)
 go-to-category=Přejít do kategorie
 go-to-dashboard-pages=Go to Dashboard Pages (Automatic Copy)
-go-to-documentation-to-learn-more-about-date-formats=Go to documentation to learn more about date formats. (Automatic Copy)
+go-to-documentation-to-learn-more-about-date-formats=Learn more about date formats. (Automatic Copy)
 go-to-folder=Přejít do složky
 go-to-live=Go to Live (Automatic Copy)
 go-to-marketplace=Go to Marketplace (Automatic Copy)
