--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_de.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_de.properties
@@ -7241,7 +7241,7 @@ go-back=Zurück
 go-to-answers=Gehen Sie zu Antworten
 go-to-category=Zu Kategorie wechseln
 go-to-dashboard-pages=Auf Dashboard-Seiten wechseln
-go-to-documentation-to-learn-more-about-date-formats=Go to documentation to learn more about date formats. (Automatic Copy)
+go-to-documentation-to-learn-more-about-date-formats=Learn more about date formats. (Automatic Copy)
 go-to-folder=Zu Ordner wechseln
 go-to-live=Zum Livesystem wechseln
 go-to-marketplace=Zum Marketplace wechseln
