--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_fa.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_fa.properties
@@ -7241,7 +7241,7 @@ go-back=برگرد (Automatic Translation)
 go-to-answers=Go to Answers (Automatic Copy)
 go-to-category=برو به گروهبندی
 go-to-dashboard-pages=به صفحات داشبورد بروید.
-go-to-documentation-to-learn-more-about-date-formats=Go to documentation to learn more about date formats. (Automatic Copy)
+go-to-documentation-to-learn-more-about-date-formats=Learn more about date formats. (Automatic Copy)
 go-to-folder=انتقال به پوشه
 go-to-live=به اصلی بروید
 go-to-marketplace=به بخش فروش بروید
