--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_fi.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_fi.properties
@@ -7241,7 +7241,7 @@ go-back=Palaa takaisin
 go-to-answers=Siirry vastauksiin
 go-to-category=Siirry aihealueelle
 go-to-dashboard-pages=Mene koontinäytönsivuille
-go-to-documentation-to-learn-more-about-date-formats=Go to documentation to learn more about date formats. (Automatic Copy)
+go-to-documentation-to-learn-more-about-date-formats=Learn more about date formats. (Automatic Copy)
 go-to-folder=Siirry kansioon
 go-to-live=Mene julkiselle puolelle.
 go-to-marketplace=Mene Marketplacelle
