--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_iw.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_iw.properties
@@ -7241,7 +7241,7 @@ go-back=תחזור (Automatic Translation)
 go-to-answers=Go to Answers (Automatic Copy)
 go-to-category=עבור לקטגוריה
 go-to-dashboard-pages=עבור לדפי לוח הבקרה
-go-to-documentation-to-learn-more-about-date-formats=Go to documentation to learn more about date formats. (Automatic Copy)
+go-to-documentation-to-learn-more-about-date-formats=Learn more about date formats. (Automatic Copy)
 go-to-folder=עבור לתיקיה
 go-to-live=עבור לאתר החי
 go-to-marketplace=עבור לשוק
