--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_ms.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_ms.properties
@@ -7241,7 +7241,7 @@ go-back=Pergi balik (Automatic Translation)
 go-to-answers=Go to Answers (Automatic Copy)
 go-to-category=Pergi ke Kategori (Automatic Translation)
 go-to-dashboard-pages=Pergi ke Halaman Papan Pemuka (Automatic Translation)
-go-to-documentation-to-learn-more-about-date-formats=Go to documentation to learn more about date formats. (Automatic Copy)
+go-to-documentation-to-learn-more-about-date-formats=Learn more about date formats. (Automatic Copy)
 go-to-folder=Pergi ke Folder (Automatic Translation)
 go-to-live=Pergi ke Live (Automatic Translation)
 go-to-marketplace=Pergi ke Marketplace (Automatic Translation)
