--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_pl.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_pl.properties
@@ -7241,7 +7241,7 @@ go-back=Przejdź wstecz (Automatic Translation)
 go-to-answers=Go to Answers (Automatic Copy)
 go-to-category=Przejdź do kategorii
 go-to-dashboard-pages=Przejdź do stron pulpitu nawigacyjnego (Automatic Translation)
-go-to-documentation-to-learn-more-about-date-formats=Go to documentation to learn more about date formats. (Automatic Copy)
+go-to-documentation-to-learn-more-about-date-formats=Learn more about date formats. (Automatic Copy)
 go-to-folder=Przejdź do folderu
 go-to-live=Przejdź do relacji Na żywo (Automatic Translation)
 go-to-marketplace=Przejdź do Marketplace (Automatic Translation)
