--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_sk.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_sk.properties
@@ -7241,7 +7241,7 @@ go-back=vráť sa (Automatic Translation)
 go-to-answers=Go to Answers (Automatic Copy)
 go-to-category=Prejsť na kategóriu
 go-to-dashboard-pages=Prejsť na stránky tabule (dashboard) (Automatic Translation)
-go-to-documentation-to-learn-more-about-date-formats=Go to documentation to learn more about date formats. (Automatic Copy)
+go-to-documentation-to-learn-more-about-date-formats=Learn more about date formats. (Automatic Copy)
 go-to-folder=Prejsť do zložky
 go-to-live=Prejsť na Naživo (Automatic Translation)
 go-to-marketplace=Prejsť na Trhovisko (Automatic Translation)
