--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_sl.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_sl.properties
@@ -7241,7 +7241,7 @@ go-back=vrni se (Automatic Translation)
 go-to-answers=Go to Answers (Automatic Copy)
 go-to-category=Pojdi na kategorijo
 go-to-dashboard-pages=Pojdi na strani nadzorne plošče (Automatic Translation)
-go-to-documentation-to-learn-more-about-date-formats=Go to documentation to learn more about date formats. (Automatic Copy)
+go-to-documentation-to-learn-more-about-date-formats=Learn more about date formats. (Automatic Copy)
 go-to-folder=Pojdi v mapo
 go-to-live=Pojdi v živo (Automatic Translation)
 go-to-marketplace=Pojdite na Tržnico (Automatic Translation)
