--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_uk.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_uk.properties
@@ -7241,7 +7241,7 @@ go-back=Повертатися (Automatic Translation)
 go-to-answers=Go to Answers (Automatic Copy)
 go-to-category=Перейти до категорії (Automatic Translation)
 go-to-dashboard-pages=Перейти до сторінок приладної дошки (Automatic Translation)
-go-to-documentation-to-learn-more-about-date-formats=Go to documentation to learn more about date formats. (Automatic Copy)
+go-to-documentation-to-learn-more-about-date-formats=Learn more about date formats. (Automatic Copy)
 go-to-folder=Коренева тека
 go-to-live=Перейти до live (Automatic Translation)
 go-to-marketplace=Перейти до Ринку (Automatic Translation)
