--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_vi.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_vi.properties
@@ -7241,7 +7241,7 @@ go-back=Quay lại (Automatic Translation)
 go-to-answers=Go to Answers (Automatic Copy)
 go-to-category=Đi tới Chuyên mục
 go-to-dashboard-pages=Chuyển đến trang chủ Tác nghiệp
-go-to-documentation-to-learn-more-about-date-formats=Go to documentation to learn more about date formats. (Automatic Copy)
+go-to-documentation-to-learn-more-about-date-formats=Learn more about date formats. (Automatic Copy)
 go-to-folder=Đi tới Thư mục
 go-to-live=Đi tới Trực tiếp (Automatic Translation)
 go-to-marketplace=Truy cập Marketplace (Automatic Translation)
