--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_zh_CN.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_zh_CN.properties
@@ -7241,7 +7241,7 @@ go-back=返回
 go-to-answers=转到答案
 go-to-category=转到类别
 go-to-dashboard-pages=转到仪表板页面
-go-to-documentation-to-learn-more-about-date-formats=Go to documentation to learn more about date formats. (Automatic Copy)
+go-to-documentation-to-learn-more-about-date-formats=Learn more about date formats. (Automatic Copy)
 go-to-folder=转到文件夹
 go-to-live=转到 Live
 go-to-marketplace=转到 Marketplace
