--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_es_CO.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_es_CO.properties
@@ -7241,7 +7241,7 @@ go-back=Volver
 go-to-answers=Ir a respuestas
 go-to-category=Ir a la categoría
 go-to-dashboard-pages=Ir al panel de páginas
-go-to-documentation-to-learn-more-about-date-formats=Go to documentation to learn more about date formats. (Automatic Copy)
+go-to-documentation-to-learn-more-about-date-formats=Learn more about date formats. (Automatic Copy)
 go-to-folder=Ir a la carpeta
 go-to-live=Ir a Live
 go-to-marketplace=Ir al mercado
