--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_in.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_in.properties
@@ -7241,7 +7241,7 @@ go-back=Kembali (Automatic Translation)
 go-to-answers=Go to Answers (Automatic Copy)
 go-to-category=Pergi ke Kategori
 go-to-dashboard-pages=Masuk ke Halaman Dasbor (Automatic Translation)
-go-to-documentation-to-learn-more-about-date-formats=Go to documentation to learn more about date formats. (Automatic Copy)
+go-to-documentation-to-learn-more-about-date-formats=Learn more about date formats. (Automatic Copy)
 go-to-folder=Pergi ke Folder
 go-to-live=Buka Siaran Langsung (Automatic Translation)
 go-to-marketplace=Buka Marketplace (Automatic Translation)
