--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_it.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_it.properties
@@ -7240,7 +7240,7 @@ go-back=Indietro (Automatic Translation)
 go-to-answers=Go to Answers (Automatic Copy)
 go-to-category=Vai alla Categoria
 go-to-dashboard-pages=Vai alle pagine della Dashboard
-go-to-documentation-to-learn-more-about-date-formats=Go to documentation to learn more about date formats. (Automatic Copy)
+go-to-documentation-to-learn-more-about-date-formats=Learn more about date formats. (Automatic Copy)
 go-to-folder=Vai alla Cartella
 go-to-live=Vai a Live
 go-to-marketplace=Vai a Marketplace
