--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_ko.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_ko.properties
@@ -7241,7 +7241,7 @@ go-back=뒤로 가기
 go-to-answers=답변 가기
 go-to-category=종류에 가십시오
 go-to-dashboard-pages=대시보드 페이지 가기
-go-to-documentation-to-learn-more-about-date-formats=Go to documentation to learn more about date formats. (Automatic Copy)
+go-to-documentation-to-learn-more-about-date-formats=Learn more about date formats. (Automatic Copy)
 go-to-folder=폴더에 가십시오
 go-to-live=라이브 가기
 go-to-marketplace=마켓플레이스 가기
