--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_pt_PT.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_pt_PT.properties
@@ -7241,7 +7241,7 @@ go-back=Voltar (Automatic Translation)
 go-to-answers=Go to Answers (Automatic Copy)
 go-to-category=Ir para Categoria
 go-to-dashboard-pages=Ir para Páginas do Painel de Trabalho
-go-to-documentation-to-learn-more-about-date-formats=Go to documentation to learn more about date formats. (Automatic Copy)
+go-to-documentation-to-learn-more-about-date-formats=Learn more about date formats. (Automatic Copy)
 go-to-folder=Ir para pasta
 go-to-live=Ir para Produção (Live)
 go-to-marketplace=Ir para o MarketPlace
