--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_tr.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_tr.properties
@@ -7241,7 +7241,7 @@ go-back=Geri Git (Automatic Translation)
 go-to-answers=Go to Answers (Automatic Copy)
 go-to-category=Kategoriye Git (Automatic Translation)
 go-to-dashboard-pages=Pano Sayfaları'na gitme (Automatic Translation)
-go-to-documentation-to-learn-more-about-date-formats=Go to documentation to learn more about date formats. (Automatic Copy)
+go-to-documentation-to-learn-more-about-date-formats=Learn more about date formats. (Automatic Copy)
 go-to-folder=Kök/(Kaynak) Klasör
 go-to-live=Canlı Yayına Geçin (Automatic Translation)
 go-to-marketplace=Marketplace'e gidin (Automatic Translation)
